home spacing fix. bump to 1.1.3

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -46,7 +46,7 @@ html body.categories-list #main-outlet {
 }
 
 html body.categories-list #navigation-bar,
-.navigation-controls {
+html body.categories-list .navigation-controls {
 	margin-bottom: 0 !important;
 }
 
